--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "start" : "node server.js",
+    "build": "[my-framework] build --output public",
     "test": "mocha --exit"
   },
   "keywords": [],
