--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start" : "node server.js",
-    "build": "[my-framework] build --output public",
+    "build": "webpack",
     "test": "mocha --exit"
   },
   "keywords": [],
