--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start" : "node server.js",
     "build": "webpack",
-    "test": "mocha --exit"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
